// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Group should call onChange prop with selected option 1`] = `
.c1 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 0.8rem 0px;
  cursor: default;
}

.c1::after {
  color: red;
  content: ' *';
}

.c8 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c4 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c2 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 1px solid;
  width: 100%;
  height: 100%;
  z-index: 1;
  border-radius: 100%;
}

.c10 {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c10 ~ .c11 {
  border-color: #13181D;
}

.c10:checked ~ .c11 {
  border-width: calc(1.8rem / 3);
}

.c10:checked:disabled ~ .c11 {
  border-color: #dfe4e9;
}

.c10:not(:checked):disabled ~ .c11 {
  border-color: #98A7B7;
}

.c10:not(:disabled):checked ~ .c11 {
  border-color: #005AEE;
}

.c9 {
  margin: 0.3rem;
  width: 2.2rem;
  height: 2.2rem;
  position: relative;
  border-radius: 100%;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c6 .c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: inherit;
  padding: 0 1.6rem;
}

.c6 .c7::after {
  color: red;
  content: ' *';
}

.c6:hover.c5:hover .c11 {
  border-color: #1A6BF0;
}

<div>
  <div
    class="c0"
    id="Gender-radioGroup"
  >
    <label
      class="c1 c2"
      required=""
    >
      Gender
    </label>
    <div
      class="c3 c4"
    >
      <label
        class="c5 c6"
        id="Female-wrapper"
        required=""
        sizes="[object Object]"
      >
        <span
          class="c7 c8"
          id="Female-label"
        >
          Female
        </span>
        <div
          class="c9"
        >
          <input
            checked=""
            class="c10"
            id="Female"
            name="gender"
            required=""
            sizes="[object Object]"
            type="radio"
            value="female"
          />
          <div
            class="c11 c12"
          />
        </div>
      </label>
      <label
        class="c5 c6"
        id="Male-wrapper"
        required=""
        sizes="[object Object]"
      >
        <span
          class="c7 c8"
          id="Male-label"
        >
          Male
        </span>
        <div
          class="c9"
        >
          <input
            class="c10"
            id="Male"
            name="gender"
            required=""
            sizes="[object Object]"
            type="radio"
            value="male"
          />
          <div
            class="c11 c12"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Radio Group should render correctly 1`] = `
.c1 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c7 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c4 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c2 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 1px solid;
  width: 100%;
  height: 100%;
  z-index: 1;
  border-radius: 100%;
}

.c9 {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: not-allowed;
}

.c9 ~ .c10 {
  border-color: #13181D;
}

.c9:checked ~ .c10 {
  border-width: calc(1.8rem / 3);
}

.c9:checked:disabled ~ .c10 {
  border-color: #dfe4e9;
}

.c9:not(:checked):disabled ~ .c10 {
  border-color: #98A7B7;
}

.c9:not(:disabled):checked ~ .c10 {
  border-color: #005AEE;
}

.c8 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c5 .c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #98A7B7;
  padding: 0 1.6rem;
}

<div>
  <div
    class="c0"
    id="Gender-radioGroup"
  >
    <label
      class="c1 c2"
    >
      Gender
    </label>
    <div
      class="c3 c4"
    >
      <label
        class="c5"
        disabled=""
        id="Female-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c7"
          id="Female-label"
        >
          Female
        </span>
        <div
          class="c8"
        >
          <input
            checked=""
            class="c9"
            disabled=""
            id="Female"
            name="gender"
            sizes="[object Object]"
            type="radio"
            value="female"
          />
          <div
            class="c10 c11"
          />
        </div>
      </label>
      <label
        class="c5"
        disabled=""
        id="Male-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c6 c7"
          id="Male-label"
        >
          Male
        </span>
        <div
          class="c8"
        >
          <input
            class="c9"
            disabled=""
            id="Male"
            name="gender"
            sizes="[object Object]"
            type="radio"
            value="male"
          />
          <div
            class="c10 c11"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;
